# ugc_sprint_1

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.etl_ch.yml  docker-compose.yml
architecture/: all_services_component.wsd  ugs_service_sequence.wsd
data_ch/node1/: config.xml  init-db.sh
data_ch/node2/: config.xml  init-db.sh
data_ch/node3/: config.xml  init-db.sh
data_ch/node4/: config.xml  init-db.sh
etl/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  wait-for-kafka-and-ch.sh
etl/main/: app.py  logger.py  models.py  settings.py
etl/main/pipelines/: etl_run.py
etl/main/repositories/: ch_writer.py  kafka_reader.py
flask_app/: .env.example  Dockerfile  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  pywsgi.py  wait-for-kafka.sh
flask_app/docs/: api_spec.py  docs.yaml  flask_app.postman_collection.json  swagger.py
flask_app/src/: app.py  config.py  models.py  routes.py  utils.py
flask_app/tests/: conftest.py  test_actions.py
nginx/: nginx.conf
